# Cpp_Study

./: .gitignore  README.md
BasicKnowledge/: CMakeLists.txt  main.cpp
BasicKnowledge/Exceptions/: main.cpp
BasicKnowledge/SmartPointers/: 12-1.cpp  README.md
BasicKnowledge/chapter11/: mytime0.cpp  mytime0.h
BasicKnowledge/chapter13/: tabtenn0.cpp  tabtenn0.h
BasicKnowledge/chapter16/: 16-1.cpp  main.cpp
BasicKnowledge/kingsoftware/: test.cpp  test.h
BasicKnowledge/vectorT/: main.cpp
CppDesignPatterns/: CMakeLists.txt  README.md  main.cpp
CppDesignPatterns/adapter/: README.md
CppDesignPatterns/builder/: Builder.cpp  Builder.h  Director.cpp  Director.h  Product.cpp  Product.h  README.md  main.cpp
CppDesignPatterns/factory/: Factory.cpp  Factory.h  Product.cpp  Product.h  README.md  main.cpp
CppDesignPatterns/singleton/: README.md  Singleton.cpp  Singleton.h
CppDesignPatterns/week03/: Compoundshape.cpp  Compoundshape.h  CompoundshapeBuilder.cpp  CompoundshapeBuilder.h  Rectangle.cpp  Rectangle.h  Round.cpp  Round.h  Shape.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h  Square.cpp  Square.h  Trapezium.cpp  Trapezium.h  Triangle.cpp  Triangle.h  main.cpp
CppDesignPatterns/week04/: KMatrix.cpp  KMatrix.h  KMatrixPlus.cpp  KMatrixPlus.h  Test.cpp  Test.h  TestBuilder.cpp  TestMap.cpp  TestVector.cpp  kIterator.h  kMatrix.h  kMatrixBase.h  kMatrixBuilder.h  kMatrixIterator.h  kMatrixMap.cpp  kMatrixMap.h  kMatrixVector.cpp  kMatrixVector.h  kMatrixVectorSource.cpp  kMatrixVectorSource.h  main.cpp
KShopManager/: KShopManager.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
KShopManager/dao/: kproductdao.cpp  kproductdao.h  kuserdao.h
KShopManager/entity/: kproductentity.cpp  kproductentity.h  kuserentity.cpp  kuserentity.h
KShopManager/service/: kproductservice.cpp  kproductservice.h  kuserservice.cpp  kuserservice.h
KShopManager/test/: kproductdaotest.cpp  kproductdaotest.h  kuserdaotest.cpp  kuserdaotest.h
KShopManager/utils/: kconstants.h  ktoolmethods.h
KShopManager/windows/: kloginwindow.cpp  kloginwindow.h  kloginwindow.ui  kproductmanagerwindow.cpp  kproductmanagerwindow.h  kproductmanagerwindow.ui
Qt/: Calculator.rar
Qt/Calculator/: Calculator.pro  Calculator.pro.user.d8a1f83  calculator.cpp  calculator.h  expression.cpp  expression.h  keyboardwidget.cpp  keyboardwidget.h  keyboardwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  screenedit.cpp  screenedit.h  screenedit.ui
Qt/KShopManager/: KShopManager.pro  kconstant.h  (+13 more)
VSStudyTest/: VSStudyTest.cpp  VSStudyTest.sln  VSStudyTest.vcxproj  VSStudyTest.vcxproj.filters
chapter10/: chapter10.sln
(+138 files in other folders)
